update .env file for better ci tests experience

--- a/.env
+++ b/.env
@@ -1,14 +1,3 @@
-# for mongo local docker container
-MONGO_LOCAL_DOCKER_USERNAME="example"
-MONGO_LOCAL_DOCKER_PASSWORD="example"
-
-# for postgres local docker container 
-POSTGRES_LOCAL_DOCKER_USERNAME="example"
-POSTGRES_LOCAL_DOCKER_PASSWORD="example"
-
-################################################################################
-# for tufa_backend
-
 GITHUB_NAME="example"
 GITHUB_TOKEN="example"
 
@@ -19,14 +8,14 @@ REDDIT_USERNAME="example"
 REDDIT_PASSWORD="example"
 
 DBS_ENABLE_INITIALIZATION="true"
-PROVIDERS_LINK_PARTS_SOURCE="local" # "local" or "mongo" or "postgres" or panic on runtime
+PROVIDERS_LINK_PARTS_SOURCE="example" # "local" or "mongo" or "postgres" or panic on runtime
 
 # url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_IP&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
-MONGO_FIRST_HANDLE_URL_PART="mongodb://" #local "mongodb://" cloud "mongodb+srv://"
-MONGO_SECOND_HANDLE_URL_PART=":"  #local ":" cloud ":"
-MONGO_THIRD_HANDLE_URL_PART="@" #local "@" cloud "@"
-MONGO_FOURTH_HANDLE_URL_PART=":" #local ":" cloud ""
-MONGO_FIFTH_HANDLE_URL_PART="" #local "" cloud "/"
+MONGO_FIRST_HANDLE_URL_PART="example" #local "mongodb://" cloud "mongodb+srv://"
+MONGO_SECOND_HANDLE_URL_PART="example"  #local ":" cloud ":"
+MONGO_THIRD_HANDLE_URL_PART="example" #local "@" cloud "@"
+MONGO_FOURTH_HANDLE_URL_PART="example" #local ":" cloud ""
+MONGO_FIFTH_HANDLE_URL_PART="example" #local "" cloud "/"
 
 MONGO_LOGIN="example"
 MONGO_PASSWORD="example"
@@ -34,9 +23,9 @@ MONGO_IP="example"
 MONGO_PORT="example"
 MONGO_PARAMS="example"
 
-MONGO_PROVIDERS_LOGS_DB_NAME="logs"
-MONGO_PROVIDERS_LOGS_DB_COLLECTION_HANDLE_SECOND_PART="second_part"
-MONGO_PROVIDERS_LOGS_DB_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE="data"
+MONGO_PROVIDERS_LOGS_DB_NAME="example"
+MONGO_PROVIDERS_LOGS_DB_COLLECTION_HANDLE_SECOND_PART="example"
+MONGO_PROVIDERS_LOGS_DB_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE="example"
 
 MONGO_ENABLE_INITIALIZATION="true"
 MONGO_ENABLE_INITIALIZATION_FOR_PROVIDERS="true"
@@ -89,11 +78,11 @@ MONGO_ENABLE_LINK_PARTS_RANDOMIZE_ORDER_FOR_REDDIT="true"
 MONGO_ENABLE_LINK_PARTS_RANDOMIZE_ORDER_FOR_TWITTER="true"
 
 # example POSTGRES_FIRST_HANDLE_URL_PART&POSTGRES_LOGIN&POSTGRES_SECOND_HANDLE_URL_PART&POSTGRES_PASSWORD&POSTGRES_THIRD_HANDLE_URL_PART&POSTGRES_IP&POSTGRES_FOURTH_HANDLE_URL_PART&POSTGRES_DB
-POSTGRES_FIRST_HANDLE_URL_PART="postgres://" #local "postgres://" cloud "postgres://"
-POSTGRES_SECOND_HANDLE_URL_PART=":" #local ":" cloud ":"
-POSTGRES_THIRD_HANDLE_URL_PART="@" #local "@" cloud "@"
-POSTGRES_FOURTH_HANDLE_URL_PART=":" #local ":" cloud ""
-POSTGRES_FIFTH_HANDLE_URL_PART="/" #local "/" cloud "/"
+POSTGRES_FIRST_HANDLE_URL_PART="example" #local "postgres://" cloud "postgres://"
+POSTGRES_SECOND_HANDLE_URL_PART="example" #local ":" cloud ":"
+POSTGRES_THIRD_HANDLE_URL_PART="example" #local "@" cloud "@"
+POSTGRES_FOURTH_HANDLE_URL_PART="example" #local ":" cloud ""
+POSTGRES_FIFTH_HANDLE_URL_PART="example" #local "/" cloud "/"
 
 POSTGRES_LOGIN="example"
 POSTGRES_PASSWORD="example"
@@ -111,20 +100,20 @@ POSTGRES_ENABLE_INITIALIZATION_FOR_MEDRXIV="true"
 POSTGRES_ENABLE_INITIALIZATION_FOR_REDDIT="true"
 POSTGRES_ENABLE_INITIALIZATION_FOR_TWITTER="true"
 
-WARNING_LOGS_DIRECTORY_NAME="warning_logs"
-UNHANDLED_SUCCESS_HANDLED_SUCCESS_ARE_THERE_ITEMS_INITIALIZED_POSTS_DIR="unhandled_success_handled_success_are_there_items_initialized_posts"
-PATH_TO_PROVIDER_LINK_PARTS_FOLDER="./providers_link_parts/"
-LOG_FILE_EXTENSION=".json" # rename this into log_...
+WARNING_LOGS_DIRECTORY_NAME="example"
+UNHANDLED_SUCCESS_HANDLED_SUCCESS_ARE_THERE_ITEMS_INITIALIZED_POSTS_DIR="example"
+PATH_TO_PROVIDER_LINK_PARTS_FOLDER="example"
+LOG_FILE_EXTENSION="example"
 
-ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER="false"
-ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_PROVIDERS="false"
-ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_ARXIV="false"
-ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_BIORXIV="false"
-ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_GITHUB="false"
-ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_HABR="false"
-ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_MEDRXIV="false"
-ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_REDDIT="false"
-ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_TWITTER="false"
+ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER="true"
+ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_PROVIDERS="true"
+ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_ARXIV="true"
+ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_BIORXIV="true"
+ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_GITHUB="true"
+ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_HABR="true"
+ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_MEDRXIV="true"
+ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_REDDIT="true"
+ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_FOR_TWITTER="true"
 
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_PROVIDERS="true"
@@ -136,22 +125,22 @@ ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_MEDRXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_REDDIT="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_TWITTER="true"
 
-STARTING_CHECK_LINK="https://www.google.com/"
-ARXIV_CHECK_LINK="https://www.google.com/" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
-BIORXIV_CHECK_LINK="https://www.google.com/" # http://connect.biorxiv.org/
-GITHUB_CHECK_LINK="https://github.com/"
-HABR_CHECK_LINK="https://www.google.com/" # https://habr.com/ru/
-MEDRXIV_CHECK_LINK="https://www.google.com/" # http://connect.medrxiv.org/
-REDDIT_CHECK_LINK="https://www.reddit.com/"
-TWITTER_CHECK_LINK="https://www.google.com/" # must be not only 1 str but many - twitter and many nitters
+STARTING_CHECK_LINK="example" # https://www.google.com/
+ARXIV_CHECK_LINK="example" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
+BIORXIV_CHECK_LINK="example" # http://connect.biorxiv.org/
+GITHUB_CHECK_LINK="example" # https://github.com/
+HABR_CHECK_LINK="example" # https://habr.com/ru/
+MEDRXIV_CHECK_LINK="example" # http://connect.medrxiv.org/
+REDDIT_CHECK_LINK="example" # https://www.reddit.com/
+TWITTER_CHECK_LINK="example" # must be not only 1 str but many - twitter and many nitters
 
 ENABLE_PROVIDERS="true"
-ENABLE_ARXIV="false"
-ENABLE_BIORXIV="false"
-ENABLE_GITHUB="false"
-ENABLE_HABR="false"
-ENABLE_MEDRXIV="false"
-ENABLE_REDDIT="false"
+ENABLE_ARXIV="true"
+ENABLE_BIORXIV="true"
+ENABLE_GITHUB="true"
+ENABLE_HABR="true"
+ENABLE_MEDRXIV="true"
+ENABLE_REDDIT="true"
 ENABLE_TWITTER="true"
 
 ENABLE_PRINTS="true"
@@ -245,36 +234,36 @@ ENABLE_LINKS_LIMIT_FOR_REDDIT="true"
 ENABLE_LINKS_LIMIT_FOR_TWITTER="true"
 
 ENABLE_COMMON_PROVIDERS_LINKS_LIMIT="true"
-COMMON_PROVIDERS_LINKS_LIMIT="30" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_ARXIV="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_BIORXIV="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_GITHUB="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_HABR="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_MEDRXIV="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_REDDIT="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_TWITTER="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+COMMON_PROVIDERS_LINKS_LIMIT="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_FOR_ARXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_FOR_BIORXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_FOR_GITHUB="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_FOR_HABR="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_FOR_MEDRXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_FOR_REDDIT="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_FOR_TWITTER="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 
-ERROR_RED="255" # u8
+ERROR_RED="0" # u8
 ERROR_GREEN="0" # u8
 ERROR_BLUE="0" # u8
-WARNING_HIGH_RED="255" # u8
-WARNING_HIGH_GREEN="165" # u8
+WARNING_HIGH_RED="0" # u8
+WARNING_HIGH_GREEN="0" # u8
 WARNING_HIGH_BLUE="0" # u8
-WARNING_LOW_RED="255" # u8
-WARNING_LOW_GREEN="255" # u8
+WARNING_LOW_RED="0" # u8
+WARNING_LOW_GREEN="0" # u8
 WARNING_LOW_BLUE="0" # u8
 SUCCESS_RED="0" # u8
-SUCCESS_GREEN="255" # u8
+SUCCESS_GREEN="0" # u8
 SUCCESS_BLUE="0" # u8
 PARTIAL_SUCCESS_RED="0" # u8
-PARTIAL_SUCCESS_GREEN="200" # u8
-PARTIAL_SUCCESS_BLUE="155" # u8
-CLEANING_RED="230" # u8
-CLEANING_GREEN="234" # u8
-CLEANING_BLUE="255" # u8
-TIME_MEASUREMENT_RED="255" # u8
-TIME_MEASUREMENT_GREEN="153" # u8
-TIME_MEASUREMENT_BLUE="170" # u8
-INFO_RED="240" # u8
-INFO_GREEN="240" # u8
-INFO_BLUE="240" # u8
+PARTIAL_SUCCESS_GREEN="0" # u8
+PARTIAL_SUCCESS_BLUE="0" # u8
+CLEANING_RED="0" # u8
+CLEANING_GREEN="0" # u8
+CLEANING_BLUE="0" # u8
+TIME_MEASUREMENT_RED="0" # u8
+TIME_MEASUREMENT_GREEN="0" # u8
+TIME_MEASUREMENT_BLUE="0" # u8
+INFO_RED="0" # u8
+INFO_GREEN="0" # u8
+INFO_BLUE="0" # u8
