CHECK_LINK_FOR_ renaming

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -162,13 +162,13 @@ services:
       IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_FOR_TWITTER: ${IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_FOR_TWITTER}
 
       STARTING_CHECK_LINK: ${STARTING_CHECK_LINK}
-      ARXIV_CHECK_LINK: ${ARXIV_CHECK_LINK}
-      BIORXIV_CHECK_LINK: ${BIORXIV_CHECK_LINK}
-      GITHUB_CHECK_LINK: ${GITHUB_CHECK_LINK}
-      HABR_CHECK_LINK: ${HABR_CHECK_LINK}
-      MEDRXIV_CHECK_LINK: ${MEDRXIV_CHECK_LINK}
-      REDDIT_CHECK_LINK: ${REDDIT_CHECK_LINK}
-      TWITTER_CHECK_LINK: ${TWITTER_CHECK_LINK}
+      CHECK_LINK_FOR_ARXIV: ${CHECK_LINK_FOR_ARXIV}
+      CHECK_LINK_FOR_BIORXIV: ${CHECK_LINK_FOR_BIORXIV}
+      CHECK_LINK_FOR_GITHUB: ${CHECK_LINK_FOR_GITHUB}
+      CHECK_LINK_FOR_HABR: ${CHECK_LINK_FOR_HABR}
+      CHECK_LINK_FOR_MEDRXIV: ${CHECK_LINK_FOR_MEDRXIV}
+      CHECK_LINK_FOR_REDDIT: ${CHECK_LINK_FOR_REDDIT}
+      CHECK_LINK_FOR_TWITTER: ${CHECK_LINK_FOR_TWITTER}
 
       ENABLE_PROVIDERS: ${ENABLE_PROVIDERS}
       ENABLE_ARXIV: ${ENABLE_ARXIV}
