CHECK_LINK renaming

--- a/.env
+++ b/.env
@@ -126,13 +126,13 @@ IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_REDDIT="false"
 IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_TWITTER="false"
 
 STARTING_CHECK_LINK="" # https://www.google.com/
-CHECK_LINK_FOR_ARXIV="" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
-CHECK_LINK_FOR_BIORXIV="" # http://connect.biorxiv.org/
-CHECK_LINK_FOR_GITHUB="" # https://github.com/
-CHECK_LINK_FOR_HABR="" # https://habr.com/ru/
-CHECK_LINK_FOR_MEDRXIV="" # http://connect.medrxiv.org/
-CHECK_LINK_FOR_REDDIT="" # https://www.reddit.com/
-CHECK_LINK_FOR_TWITTER="" # must be not only 1 str but many - twitter and many nitters
+CHECK_LINK_ARXIV="" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
+CHECK_LINK_BIORXIV="" # http://connect.biorxiv.org/
+CHECK_LINK_GITHUB="" # https://github.com/
+CHECK_LINK_HABR="" # https://habr.com/ru/
+CHECK_LINK_MEDRXIV="" # http://connect.medrxiv.org/
+CHECK_LINK_REDDIT="" # https://www.reddit.com/
+CHECK_LINK_TWITTER="" # must be not only 1 str but many - twitter and many nitters
 
 ENABLE_PROVIDERS="false"
 ENABLE_ARXIV="false"
