--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -162,13 +162,13 @@ services:
       IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_TWITTER: ${IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_TWITTER}
 
       STARTING_CHECK_LINK: ${STARTING_CHECK_LINK}
-      CHECK_LINK_FOR_ARXIV: ${CHECK_LINK_FOR_ARXIV}
-      CHECK_LINK_FOR_BIORXIV: ${CHECK_LINK_FOR_BIORXIV}
-      CHECK_LINK_FOR_GITHUB: ${CHECK_LINK_FOR_GITHUB}
-      CHECK_LINK_FOR_HABR: ${CHECK_LINK_FOR_HABR}
-      CHECK_LINK_FOR_MEDRXIV: ${CHECK_LINK_FOR_MEDRXIV}
-      CHECK_LINK_FOR_REDDIT: ${CHECK_LINK_FOR_REDDIT}
-      CHECK_LINK_FOR_TWITTER: ${CHECK_LINK_FOR_TWITTER}
+      CHECK_LINK_ARXIV: ${CHECK_LINK_ARXIV}
+      CHECK_LINK_BIORXIV: ${CHECK_LINK_BIORXIV}
+      CHECK_LINK_GITHUB: ${CHECK_LINK_GITHUB}
+      CHECK_LINK_HABR: ${CHECK_LINK_HABR}
+      CHECK_LINK_MEDRXIV: ${CHECK_LINK_MEDRXIV}
+      CHECK_LINK_REDDIT: ${CHECK_LINK_REDDIT}
+      CHECK_LINK_TWITTER: ${CHECK_LINK_TWITTER}
 
       ENABLE_PROVIDERS: ${ENABLE_PROVIDERS}
       ENABLE_ARXIV: ${ENABLE_ARXIV}
