is_enabled reanaming

--- a/.env
+++ b/.env
@@ -134,14 +134,14 @@ CHECK_LINK_MEDRXIV="" # http://connect.medrxiv.org/
 CHECK_LINK_REDDIT="" # https://www.reddit.com/
 CHECK_LINK_TWITTER="" # must be not only 1 str but many - twitter and many nitters
 
-ENABLE_PROVIDERS="false"
-ENABLE_ARXIV="false"
-ENABLE_BIORXIV="false"
-ENABLE_GITHUB="false"
-ENABLE_HABR="false"
-ENABLE_MEDRXIV="false"
-ENABLE_REDDIT="false"
-ENABLE_TWITTER="false"
+IS_ENABLED_PROVIDERS="false"
+IS_ENABLED_ARXIV="false"
+IS_ENABLED_BIORXIV="false"
+IS_ENABLED_GITHUB="false"
+IS_ENABLED_HABR="false"
+IS_ENABLED_MEDRXIV="false"
+IS_ENABLED_REDDIT="false"
+IS_ENABLED_TWITTER="false"
 
 ENABLE_PRINTS="false"
 ENABLE_PRINTS_FOR_PROVIDERS="false"
