--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -170,14 +170,14 @@ services:
       CHECK_LINK_REDDIT: ${CHECK_LINK_REDDIT}
       CHECK_LINK_TWITTER: ${CHECK_LINK_TWITTER}
 
-      ENABLE_PROVIDERS: ${ENABLE_PROVIDERS}
-      ENABLE_ARXIV: ${ENABLE_ARXIV}
-      ENABLE_BIORXIV: ${ENABLE_BIORXIV}
-      ENABLE_GITHUB: ${ENABLE_GITHUB}
-      ENABLE_HABR: ${ENABLE_HABR}
-      ENABLE_MEDRXIV: ${ENABLE_MEDRXIV}
-      ENABLE_REDDIT: ${ENABLE_REDDIT}
-      ENABLE_TWITTER: ${ENABLE_TWITTER}
+      IS_ENABLED_PROVIDERS: ${IS_ENABLED_PROVIDERS}
+      IS_ENABLED_ARXIV: ${IS_ENABLED_ARXIV}
+      IS_ENABLED_BIORXIV: ${IS_ENABLED_BIORXIV}
+      IS_ENABLED_GITHUB: ${IS_ENABLED_GITHUB}
+      IS_ENABLED_HABR: ${IS_ENABLED_HABR}
+      IS_ENABLED_MEDRXIV: ${IS_ENABLED_MEDRXIV}
+      IS_ENABLED_REDDIT: ${IS_ENABLED_REDDIT}
+      IS_ENABLED_TWITTER: ${IS_ENABLED_TWITTER}
 
       ENABLE_PRINTS: ${ENABLE_PRINTS}
       ENABLE_PRINTS_FOR_PROVIDERS: ${ENABLE_PRINTS_FOR_PROVIDERS}
