--- a/.env
+++ b/.env
@@ -143,15 +143,15 @@ IS_ENABLED_MEDRXIV="false"
 IS_ENABLED_REDDIT="false"
 IS_ENABLED_TWITTER="false"
 
-ENABLE_PRINTS="false"
-ENABLE_PRINTS_FOR_PROVIDERS="false"
-ENABLE_PRINTS_ARXIV="false"
-ENABLE_PRINTS_BIORXIV="false"
-ENABLE_PRINTS_GITHUB="false"
-ENABLE_PRINTS_HABR="false"
-ENABLE_PRINTS_MEDRXIV="false"
-ENABLE_PRINTS_REDDIT="false"
-ENABLE_PRINTS_TWITTER="false"
+IS_PRINTS_ENABLED="false"
+IS_PRINTS_ENABLED_PROVIDERS="false"
+IS_PRINTS_ENABLED_ARXIV="false"
+IS_PRINTS_ENABLED_BIORXIV="false"
+IS_PRINTS_ENABLED_GITHUB="false"
+IS_PRINTS_ENABLED_HABR="false"
+IS_PRINTS_ENABLED_MEDRXIV="false"
+IS_PRINTS_ENABLED_REDDIT="false"
+IS_PRINTS_ENABLED_TWITTER="false"
 
 ENABLE_WARNING_HIGH_PRINTS="false"
 ENABLE_WARNING_HIGH_PRINTS_FOR_PROVIDERS="false"
