--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,15 +179,15 @@ services:
       IS_ENABLED_REDDIT: ${IS_ENABLED_REDDIT}
       IS_ENABLED_TWITTER: ${IS_ENABLED_TWITTER}
 
-      ENABLE_PRINTS: ${ENABLE_PRINTS}
-      ENABLE_PRINTS_FOR_PROVIDERS: ${ENABLE_PRINTS_FOR_PROVIDERS}
-      ENABLE_PRINTS_ARXIV: ${ENABLE_PRINTS_ARXIV}
-      ENABLE_PRINTS_BIORXIV: ${ENABLE_PRINTS_BIORXIV}
-      ENABLE_PRINTS_GITHUB: ${ENABLE_PRINTS_GITHUB}
-      ENABLE_PRINTS_HABR: ${ENABLE_PRINTS_HABR}
-      ENABLE_PRINTS_MEDRXIV: ${ENABLE_PRINTS_MEDRXIV}
-      ENABLE_PRINTS_REDDIT: ${ENABLE_PRINTS_REDDIT}
-      ENABLE_PRINTS_TWITTER: ${ENABLE_PRINTS_TWITTER}
+      IS_PRINTS_ENABLED: ${IS_PRINTS_ENABLED}
+      IS_PRINTS_ENABLED_PROVIDERS: ${IS_PRINTS_ENABLED_PROVIDERS}
+      IS_PRINTS_ENABLED_ARXIV: ${IS_PRINTS_ENABLED_ARXIV}
+      IS_PRINTS_ENABLED_BIORXIV: ${IS_PRINTS_ENABLED_BIORXIV}
+      IS_PRINTS_ENABLED_GITHUB: ${IS_PRINTS_ENABLED_GITHUB}
+      IS_PRINTS_ENABLED_HABR: ${IS_PRINTS_ENABLED_HABR}
+      IS_PRINTS_ENABLED_MEDRXIV: ${IS_PRINTS_ENABLED_MEDRXIV}
+      IS_PRINTS_ENABLED_REDDIT: ${IS_PRINTS_ENABLED_REDDIT}
+      IS_PRINTS_ENABLED_TWITTER: ${IS_PRINTS_ENABLED_TWITTER}
 
       ENABLE_WARNING_HIGH_PRINTS: ${ENABLE_WARNING_HIGH_PRINTS}
       ENABLE_WARNING_HIGH_PRINTS_FOR_PROVIDERS: ${ENABLE_WARNING_HIGH_PRINTS_FOR_PROVIDERS}
