IS_ERROR_PRINTS_ENABLED renaming

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -229,15 +229,15 @@ services:
       IS_PARTIAL_SUCCESS_PRINTS_ENABLED_REDDIT: ${IS_PARTIAL_SUCCESS_PRINTS_ENABLED_REDDIT}
       IS_PARTIAL_SUCCESS_PRINTS_ENABLED_TWITTER: ${IS_PARTIAL_SUCCESS_PRINTS_ENABLED_TWITTER}
 
-      ENABLE_ERROR_PRINTS: ${ENABLE_ERROR_PRINTS}
-      ENABLE_ERROR_PRINTS_FOR_PROVIDERS: ${ENABLE_ERROR_PRINTS_FOR_PROVIDERS}
-      ENABLE_ERROR_PRINTS_FOR_ARXIV: ${ENABLE_ERROR_PRINTS_FOR_ARXIV}
-      ENABLE_ERROR_PRINTS_FOR_BIORXIV: ${ENABLE_ERROR_PRINTS_FOR_BIORXIV}
-      ENABLE_ERROR_PRINTS_FOR_GITHUB: ${ENABLE_ERROR_PRINTS_FOR_GITHUB}
-      ENABLE_ERROR_PRINTS_FOR_HABR: ${ENABLE_ERROR_PRINTS_FOR_HABR}
-      ENABLE_ERROR_PRINTS_FOR_MEDRXIV: ${ENABLE_ERROR_PRINTS_FOR_MEDRXIV}
-      ENABLE_ERROR_PRINTS_FOR_REDDIT: ${ENABLE_ERROR_PRINTS_FOR_REDDIT}
-      ENABLE_ERROR_PRINTS_FOR_TWITTER: ${ENABLE_ERROR_PRINTS_FOR_TWITTER}
+      IS_ERROR_PRINTS_ENABLED: ${IS_ERROR_PRINTS_ENABLED}
+      IS_ERROR_PRINTS_ENABLED_PROVIDERS: ${IS_ERROR_PRINTS_ENABLED_PROVIDERS}
+      IS_ERROR_PRINTS_ENABLED_ARXIV: ${IS_ERROR_PRINTS_ENABLED_ARXIV}
+      IS_ERROR_PRINTS_ENABLED_BIORXIV: ${IS_ERROR_PRINTS_ENABLED_BIORXIV}
+      IS_ERROR_PRINTS_ENABLED_GITHUB: ${IS_ERROR_PRINTS_ENABLED_GITHUB}
+      IS_ERROR_PRINTS_ENABLED_HABR: ${IS_ERROR_PRINTS_ENABLED_HABR}
+      IS_ERROR_PRINTS_ENABLED_MEDRXIV: ${IS_ERROR_PRINTS_ENABLED_MEDRXIV}
+      IS_ERROR_PRINTS_ENABLED_REDDIT: ${IS_ERROR_PRINTS_ENABLED_REDDIT}
+      IS_ERROR_PRINTS_ENABLED_TWITTER: ${IS_ERROR_PRINTS_ENABLED_TWITTER}
 
       ENABLE_TIME_MEASUREMENT_PRINTS: ${ENABLE_TIME_MEASUREMENT_PRINTS}
       ENABLE_TIME_MEASUREMENT_PRINTS_FOR_PROVIDERS: ${ENABLE_TIME_MEASUREMENT_PRINTS_FOR_PROVIDERS}
