IS_INFO_PRINTS_ENABLED renaming

--- a/.env
+++ b/.env
@@ -212,16 +212,16 @@ IS_TIME_MEASUREMENT_PRINTS_ENABLED_HABR="false"
 IS_TIME_MEASUREMENT_PRINTS_ENABLED_MEDRXIV="false"
 IS_TIME_MEASUREMENT_PRINTS_ENABLED_REDDIT="false"
 IS_TIME_MEASUREMENT_PRINTS_ENABLED_TWITTER="false"
-
-ENABLE_INFO_PRINTS="false"
-ENABLE_INFO_PRINTS_FOR_PROVIDERS="false"
-ENABLE_INFO_PRINTS_FOR_ARXIV="false"
-ENABLE_INFO_PRINTS_FOR_BIORXIV="false"
-ENABLE_INFO_PRINTS_FOR_GITHUB="false"
-ENABLE_INFO_PRINTS_FOR_HABR="false"
-ENABLE_INFO_PRINTS_FOR_MEDRXIV="false"
-ENABLE_INFO_PRINTS_FOR_REDDIT="false"
-ENABLE_INFO_PRINTS_FOR_TWITTER="false"
+   
+IS_INFO_PRINTS_ENABLED="false"
+IS_INFO_PRINTS_ENABLED_PROVIDERS="false"
+IS_INFO_PRINTS_ENABLED_ARXIV="false"
+IS_INFO_PRINTS_ENABLED_BIORXIV="false"
+IS_INFO_PRINTS_ENABLED_GITHUB="false"
+IS_INFO_PRINTS_ENABLED_HABR="false"
+IS_INFO_PRINTS_ENABLED_MEDRXIV="false"
+IS_INFO_PRINTS_ENABLED_REDDIT="false"
+IS_INFO_PRINTS_ENABLED_TWITTER="false"
 
 ENABLE_LINKS_LIMIT="false"
 ENABLE_LINKS_LIMIT_FOR_PROVIDERS="false"
