--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -249,15 +249,15 @@ services:
       IS_TIME_MEASUREMENT_PRINTS_ENABLED_REDDIT: ${IS_TIME_MEASUREMENT_PRINTS_ENABLED_REDDIT}
       IS_TIME_MEASUREMENT_PRINTS_ENABLED_TWITTER: ${IS_TIME_MEASUREMENT_PRINTS_ENABLED_TWITTER}
 
-      ENABLE_INFO_PRINTS: ${ENABLE_INFO_PRINTS}
-      ENABLE_INFO_PRINTS_FOR_PROVIDERS: ${ENABLE_INFO_PRINTS_FOR_PROVIDERS}
-      ENABLE_INFO_PRINTS_FOR_ARXIV: ${ENABLE_INFO_PRINTS_FOR_ARXIV}
-      ENABLE_INFO_PRINTS_FOR_BIORXIV: ${ENABLE_INFO_PRINTS_FOR_BIORXIV}
-      ENABLE_INFO_PRINTS_FOR_GITHUB: ${ENABLE_INFO_PRINTS_FOR_GITHUB}
-      ENABLE_INFO_PRINTS_FOR_HABR: ${ENABLE_INFO_PRINTS_FOR_HABR}
-      ENABLE_INFO_PRINTS_FOR_MEDRXIV: ${ENABLE_INFO_PRINTS_FOR_MEDRXIV}
-      ENABLE_INFO_PRINTS_FOR_REDDIT: ${ENABLE_INFO_PRINTS_FOR_REDDIT}
-      ENABLE_INFO_PRINTS_FOR_TWITTER: ${ENABLE_INFO_PRINTS_FOR_TWITTER}
+      IS_INFO_PRINTS_ENABLED: ${IS_INFO_PRINTS_ENABLED}
+      IS_INFO_PRINTS_ENABLED_PROVIDERS: ${IS_INFO_PRINTS_ENABLED_PROVIDERS}
+      IS_INFO_PRINTS_ENABLED_ARXIV: ${IS_INFO_PRINTS_ENABLED_ARXIV}
+      IS_INFO_PRINTS_ENABLED_BIORXIV: ${IS_INFO_PRINTS_ENABLED_BIORXIV}
+      IS_INFO_PRINTS_ENABLED_GITHUB: ${IS_INFO_PRINTS_ENABLED_GITHUB}
+      IS_INFO_PRINTS_ENABLED_HABR: ${IS_INFO_PRINTS_ENABLED_HABR}
+      IS_INFO_PRINTS_ENABLED_MEDRXIV: ${IS_INFO_PRINTS_ENABLED_MEDRXIV}
+      IS_INFO_PRINTS_ENABLED_REDDIT: ${IS_INFO_PRINTS_ENABLED_REDDIT}
+      IS_INFO_PRINTS_ENABLED_TWITTER: ${IS_INFO_PRINTS_ENABLED_TWITTER}
 
 
       ENABLE_LINKS_LIMIT: ${ENABLE_PROVIDER_LINKS_LIMIT}
