IS_LINKS_LIMITS_ENABLED renaming

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -260,15 +260,15 @@ services:
       IS_INFO_PRINTS_ENABLED_TWITTER: ${IS_INFO_PRINTS_ENABLED_TWITTER}
 
 
-      ENABLE_LINKS_LIMIT: ${ENABLE_PROVIDER_LINKS_LIMIT}
-      ENABLE_LINKS_LIMIT_FOR_PROVIDERS: ${ENABLE_LINKS_LIMIT_FOR_PROVIDERS}
-      ENABLE_LINKS_LIMIT_FOR_ARXIV: ${ENABLE_LINKS_LIMIT_FOR_ARXIV}
-      ENABLE_LINKS_LIMIT_FOR_BIORXIV: ${ENABLE_LINKS_LIMIT_FOR_BIORXIV}
-      ENABLE_LINKS_LIMIT_FOR_GITHUB: ${ENABLE_LINKS_LIMIT_FOR_GITHUB}
-      ENABLE_LINKS_LIMIT_FOR_HABR: ${ENABLE_LINKS_LIMIT_FOR_HABR}
-      ENABLE_LINKS_LIMIT_FOR_MEDRXIV: ${ENABLE_LINKS_LIMIT_FOR_MEDRXIV}
-      ENABLE_LINKS_LIMIT_FOR_REDDIT: ${ENABLE_LINKS_LIMIT_FOR_REDDIT}
-      ENABLE_LINKS_LIMIT_FOR_TWITTER: ${ENABLE_LINKS_LIMIT_FOR_TWITTER}      
+      IS_LINKS_LIMITS_ENABLED: ${ENABLE_PROVIDER_LINKS_LIMIT}
+      IS_LINKS_LIMITS_ENABLED_PROVIDERS: ${IS_LINKS_LIMITS_ENABLED_PROVIDERS}
+      IS_LINKS_LIMITS_ENABLED_ARXIV: ${IS_LINKS_LIMITS_ENABLED_ARXIV}
+      IS_LINKS_LIMITS_ENABLED_BIORXIV: ${IS_LINKS_LIMITS_ENABLED_BIORXIV}
+      IS_LINKS_LIMITS_ENABLED_GITHUB: ${IS_LINKS_LIMITS_ENABLED_GITHUB}
+      IS_LINKS_LIMITS_ENABLED_HABR: ${IS_LINKS_LIMITS_ENABLED_HABR}
+      IS_LINKS_LIMITS_ENABLED_MEDRXIV: ${IS_LINKS_LIMITS_ENABLED_MEDRXIV}
+      IS_LINKS_LIMITS_ENABLED_REDDIT: ${IS_LINKS_LIMITS_ENABLED_REDDIT}
+      IS_LINKS_LIMITS_ENABLED_TWITTER: ${IS_LINKS_LIMITS_ENABLED_TWITTER}      
 
       ENABLE_COMMON_PROVIDERS_LINKS_LIMIT: ${ENABLE_COMMON_PROVIDERS_LINKS_LIMIT}
       COMMON_PROVIDERS_LINKS_LIMIT: ${COMMON_PROVIDERS_LINKS_LIMIT} # i64, but > 0
