LINKS_LIMIT renaming

--- a/.env
+++ b/.env
@@ -235,13 +235,13 @@ IS_LINKS_LIMITS_ENABLED_TWITTER="false"
 
 ENABLE_COMMON_PROVIDERS_LINKS_LIMIT="false"
 COMMON_PROVIDERS_LINKS_LIMIT="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_ARXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_BIORXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_GITHUB="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_HABR="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_MEDRXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_REDDIT="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_FOR_TWITTER="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_ARXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_BIORXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_GITHUB="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_HABR="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_MEDRXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_REDDIT="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_TWITTER="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 
 ERROR_RED="0" # u8
 ERROR_GREEN="0" # u8
