--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -272,13 +272,13 @@ services:
 
       ENABLE_COMMON_PROVIDERS_LINKS_LIMIT: ${ENABLE_COMMON_PROVIDERS_LINKS_LIMIT}
       COMMON_PROVIDERS_LINKS_LIMIT: ${COMMON_PROVIDERS_LINKS_LIMIT} # i64, but > 0
-      LINKS_LIMIT_FOR_ARXIV: ${LINKS_LIMIT_FOR_ARXIV} # i64, but > 0
-      LINKS_LIMIT_FOR_BIORXIV: ${LINKS_LIMIT_FOR_BIORXIV} # i64, but > 0
-      LINKS_LIMIT_FOR_GITHUB: ${LINKS_LIMIT_FOR_GITHUB} # i64, but > 0
-      LINKS_LIMIT_FOR_HABR: ${LINKS_LIMIT_FOR_HABR} # i64, but > 0
-      LINKS_LIMIT_FOR_MEDRXIV: ${LINKS_LIMIT_FOR_MEDRXIV} # i64, but > 0
-      LINKS_LIMIT_FOR_REDDIT: ${LINKS_LIMIT_FOR_REDDIT} # i64, but > 0
-      LINKS_LIMIT_FOR_TWITTER: ${LINKS_LIMIT_FOR_TWITTER} # i64, but > 0
+      LINKS_LIMIT_ARXIV: ${LINKS_LIMIT_ARXIV} # i64, but > 0
+      LINKS_LIMIT_BIORXIV: ${LINKS_LIMIT_BIORXIV} # i64, but > 0
+      LINKS_LIMIT_GITHUB: ${LINKS_LIMIT_GITHUB} # i64, but > 0
+      LINKS_LIMIT_HABR: ${LINKS_LIMIT_HABR} # i64, but > 0
+      LINKS_LIMIT_MEDRXIV: ${LINKS_LIMIT_MEDRXIV} # i64, but > 0
+      LINKS_LIMIT_REDDIT: ${LINKS_LIMIT_REDDIT} # i64, but > 0
+      LINKS_LIMIT_TWITTER: ${LINKS_LIMIT_TWITTER} # i64, but > 0
 
       ERROR_RED: ${ERROR_RED} # u8
       ERROR_GREEN: ${ERROR_GREEN} # u8
