LINKS_LIMIT_PROVIDERS renaming

--- a/.env
+++ b/.env
@@ -234,7 +234,7 @@ IS_LINKS_LIMITS_ENABLED_REDDIT="false"
 IS_LINKS_LIMITS_ENABLED_TWITTER="false"
 
 IS_LINKS_LIMIT_PROVIDERS_ENABLED="false"
-COMMON_PROVIDERS_LINKS_LIMIT="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+LINKS_LIMIT_PROVIDERS="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_ARXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_BIORXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_GITHUB="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
