--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -271,7 +271,7 @@ services:
       IS_LINKS_LIMITS_ENABLED_TWITTER: ${IS_LINKS_LIMITS_ENABLED_TWITTER}      
 
       IS_LINKS_LIMIT_PROVIDERS_ENABLED: ${IS_LINKS_LIMIT_PROVIDERS_ENABLED}
-      COMMON_PROVIDERS_LINKS_LIMIT: ${COMMON_PROVIDERS_LINKS_LIMIT} # i64, but > 0
+      LINKS_LIMIT_PROVIDERS: ${LINKS_LIMIT_PROVIDERS} # i64, but > 0
       LINKS_LIMIT_ARXIV: ${LINKS_LIMIT_ARXIV} # i64, but > 0
       LINKS_LIMIT_BIORXIV: ${LINKS_LIMIT_BIORXIV} # i64, but > 0
       LINKS_LIMIT_GITHUB: ${LINKS_LIMIT_GITHUB} # i64, but > 0
