--- a/.env
+++ b/.env
@@ -223,15 +223,15 @@ IS_INFO_PRINTS_ENABLED_MEDRXIV="false"
 IS_INFO_PRINTS_ENABLED_REDDIT="false"
 IS_INFO_PRINTS_ENABLED_TWITTER="false"
  
-IS_LINKS_LIMITS_ENABLED="false"
-IS_LINKS_LIMITS_ENABLED_PROVIDERS="false"
-IS_LINKS_LIMITS_ENABLED_ARXIV="false"
-IS_LINKS_LIMITS_ENABLED_BIORXIV="false"
-IS_LINKS_LIMITS_ENABLED_GITHUB="false"
-IS_LINKS_LIMITS_ENABLED_HABR="false"
-IS_LINKS_LIMITS_ENABLED_MEDRXIV="false"
-IS_LINKS_LIMITS_ENABLED_REDDIT="false"
-IS_LINKS_LIMITS_ENABLED_TWITTER="false"
+IS_LINKS_LIMIT_ENABLED="false"
+IS_LINKS_LIMIT_ENABLED_PROVIDERS="false"
+IS_LINKS_LIMIT_ENABLED_ARXIV="false"
+IS_LINKS_LIMIT_ENABLED_BIORXIV="false"
+IS_LINKS_LIMIT_ENABLED_GITHUB="false"
+IS_LINKS_LIMIT_ENABLED_HABR="false"
+IS_LINKS_LIMIT_ENABLED_MEDRXIV="false"
+IS_LINKS_LIMIT_ENABLED_REDDIT="false"
+IS_LINKS_LIMIT_ENABLED_TWITTER="false"
 
 IS_LINKS_LIMIT_PROVIDERS_ENABLED="false"
 LINKS_LIMIT_PROVIDERS="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
