--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -260,15 +260,15 @@ services:
       IS_INFO_PRINTS_ENABLED_TWITTER: ${IS_INFO_PRINTS_ENABLED_TWITTER}
 
 
-      IS_LINKS_LIMITS_ENABLED: ${ENABLE_PROVIDER_LINKS_LIMIT}
-      IS_LINKS_LIMITS_ENABLED_PROVIDERS: ${IS_LINKS_LIMITS_ENABLED_PROVIDERS}
-      IS_LINKS_LIMITS_ENABLED_ARXIV: ${IS_LINKS_LIMITS_ENABLED_ARXIV}
-      IS_LINKS_LIMITS_ENABLED_BIORXIV: ${IS_LINKS_LIMITS_ENABLED_BIORXIV}
-      IS_LINKS_LIMITS_ENABLED_GITHUB: ${IS_LINKS_LIMITS_ENABLED_GITHUB}
-      IS_LINKS_LIMITS_ENABLED_HABR: ${IS_LINKS_LIMITS_ENABLED_HABR}
-      IS_LINKS_LIMITS_ENABLED_MEDRXIV: ${IS_LINKS_LIMITS_ENABLED_MEDRXIV}
-      IS_LINKS_LIMITS_ENABLED_REDDIT: ${IS_LINKS_LIMITS_ENABLED_REDDIT}
-      IS_LINKS_LIMITS_ENABLED_TWITTER: ${IS_LINKS_LIMITS_ENABLED_TWITTER}      
+      IS_LINKS_LIMIT_ENABLED: ${ENABLE_PROVIDER_LINKS_LIMIT}
+      IS_LINKS_LIMIT_ENABLED_PROVIDERS: ${IS_LINKS_LIMIT_ENABLED_PROVIDERS}
+      IS_LINKS_LIMIT_ENABLED_ARXIV: ${IS_LINKS_LIMIT_ENABLED_ARXIV}
+      IS_LINKS_LIMIT_ENABLED_BIORXIV: ${IS_LINKS_LIMIT_ENABLED_BIORXIV}
+      IS_LINKS_LIMIT_ENABLED_GITHUB: ${IS_LINKS_LIMIT_ENABLED_GITHUB}
+      IS_LINKS_LIMIT_ENABLED_HABR: ${IS_LINKS_LIMIT_ENABLED_HABR}
+      IS_LINKS_LIMIT_ENABLED_MEDRXIV: ${IS_LINKS_LIMIT_ENABLED_MEDRXIV}
+      IS_LINKS_LIMIT_ENABLED_REDDIT: ${IS_LINKS_LIMIT_ENABLED_REDDIT}
+      IS_LINKS_LIMIT_ENABLED_TWITTER: ${IS_LINKS_LIMIT_ENABLED_TWITTER}      
 
       IS_LINKS_LIMIT_PROVIDERS_ENABLED: ${IS_LINKS_LIMIT_PROVIDERS_ENABLED}
       LINKS_LIMIT_PROVIDERS: ${LINKS_LIMIT_PROVIDERS} # i64, but > 0
