create impl_display lib

--- a/proc_macro_libs/Cargo.toml
+++ b/proc_macro_libs/Cargo.toml
@@ -3,5 +3,6 @@ members = [
     "box_err_from_err",
     "enum_extention",
     "env_var_typed",
+    "impl_display",
     "provider_kind_from_config"
 ]
