--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ displaydoc = "0.2.3"
 box_err_from_err = { path = "./proc_macro_libs/box_err_from_err" }
 enum_extention = { path = "./proc_macro_libs/enum_extention" }
 env_var_typed = { path = "./proc_macro_libs/env_var_typed" }
+impl_display = { path = "./proc_macro_libs/impl_display" }
 provider_kind_from_config = { path = "./proc_macro_libs/provider_kind_from_config" }
 #egg-mode = "0.15.0"//twitter
 #google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
