--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ box_err_from_err = { path = "./proc_macro_libs/box_err_from_err" }
 enum_extention = { path = "./proc_macro_libs/enum_extention" }
 env_var_typed = { path = "./proc_macro_libs/env_var_typed" }
 impl_display = { path = "./proc_macro_libs/impl_display" }
+impl_from_for_upper_struct = { path = "./proc_macro_libs/impl_from_for_upper_struct" }
 provider_kind_from_config = { path = "./proc_macro_libs/provider_kind_from_config" }
 #egg-mode = "0.15.0"//twitter
 #google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
