--- a/proc_macro_libs/impl_from_for_upper_struct/Cargo.toml
+++ b/proc_macro_libs/impl_from_for_upper_struct/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 proc-macro=true
 
 [dependencies]
-syn = "1.0.75"
+syn = "1.0.75" # syn = { version = "1.0.75", features=["full"] }
 quote = "1.0.9" #for procedural macro (get number of enum variants)
