--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
       MONGO_PORT: ${MONGO_PORT}
       MONGO_PARAMS: ${MONGO_PARAMS}
 
+      MONGO_PROVIDERS_LINK_PARTS_DB_NAME: ${MONGO_PROVIDERS_LINK_PARTS_DB_NAME}
       MONGO_PROVIDERS_LOGS_DB_NAME: ${MONGO_PROVIDERS_LOGS_DB_NAME}
       MONGO_PROVIDERS_LOGS_DB_COLLECTION_HANDLE_SECOND_PART: ${MONGO_PROVIDERS_LOGS_DB_COLLECTION_HANDLE_SECOND_PART}
       MONGO_PROVIDERS_LOGS_DB_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE: ${MONGO_PROVIDERS_LOGS_DB_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE}
