--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ MONGO_IP=""
 MONGO_PORT=""
 MONGO_PARAMS=""
 
+MONGO_PROVIDERS_LINK_PARTS_DB_NAME=""
 MONGO_PROVIDERS_LOGS_DB_NAME=""
 MONGO_PROVIDERS_LOGS_DB_COLLECTION_HANDLE_SECOND_PART=""
 MONGO_PROVIDERS_LOGS_DB_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE=""
