another docker-compose fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,14 +143,14 @@ services:
       LOG_FILE_EXTENSION: ${LOG_FILE_EXTENSION}
 
       IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED}
-      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_PROVIDERS: ${IS_WRITE_LOGS_ERROR_IN_LOCAL_FOLDER_ENABLED_FOR_PROVIDERS}
-      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_ARXIV: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_FOR_ARXIV}
-      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_BIORXIV: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_FOR_BIORXIV}
-      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_GITHUB: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_FOR_GITHUB}
-      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_HABR: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_FOR_HABR}
-      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_MEDRXIV: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_FOR_MEDRXIV}
-      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_REDDIT: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_FOR_REDDIT}
-      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_TWITTER: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_FOR_TWITTER}
+      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_PROVIDERS: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_PROVIDERS}
+      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_ARXIV: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_ARXIV}
+      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_BIORXIV: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_BIORXIV}
+      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_GITHUB: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_GITHUB}
+      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_HABR: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_HABR}
+      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_MEDRXIV: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_MEDRXIV}
+      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_REDDIT: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_REDDIT}
+      IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_TWITTER: ${IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_TWITTER}
 
       IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED: ${IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED}
       IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_PROVIDERS: ${IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_PROVIDERS}
@@ -261,7 +261,7 @@ services:
       IS_INFO_PRINTS_ENABLED_TWITTER: ${IS_INFO_PRINTS_ENABLED_TWITTER}
 
 
-      IS_LINKS_LIMIT_ENABLED: ${ENABLE_PROVIDER_LINKS_LIMIT}
+      IS_LINKS_LIMIT_ENABLED: ${IS_LINKS_LIMIT_ENABLED}
       IS_LINKS_LIMIT_ENABLED_PROVIDERS: ${IS_LINKS_LIMIT_ENABLED_PROVIDERS}
       IS_LINKS_LIMIT_ENABLED_ARXIV: ${IS_LINKS_LIMIT_ENABLED_ARXIV}
       IS_LINKS_LIMIT_ENABLED_BIORXIV: ${IS_LINKS_LIMIT_ENABLED_BIORXIV}
