--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -46,3 +46,9 @@ jobs:
 
       - name: cargo test ci -- --show-output
         run: cargo test ci -- --show-output
+      
+      - name: cargo install cargo-audit
+        run: cargo install cargo-audit
+
+      - name: cargo audit
+        run: cargo audit
