IsDbsInitializationEnabled add to config

--- a/.env
+++ b/.env
@@ -7,7 +7,6 @@ REDDIT_CLIENT_SECRET=""
 REDDIT_USERNAME=""
 REDDIT_PASSWORD=""
 
-DBS_ENABLE_INITIALIZATION="false"
 PROVIDERS_LINK_PARTS_SOURCE="" # "local" or "mongo" or "postgres" or panic on runtime
 
 # url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_IP&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
@@ -143,6 +142,16 @@ IS_ENABLED_HABR="false"
 IS_ENABLED_MEDRXIV="false"
 IS_ENABLED_REDDIT="false"
 IS_ENABLED_TWITTER="false"
+
+IS_DBS_INITIALIZATION_ENABLED="true"
+IS_DBS_INITIALIZATION_ENABLED_PROVIDERS="true"
+IS_DBS_INITIALIZATION_ENABLED_ARXIV="true"
+IS_DBS_INITIALIZATION_ENABLED_BIORXIV="true"
+IS_DBS_INITIALIZATION_ENABLED_GITHUB="true"
+IS_DBS_INITIALIZATION_ENABLED_HABR="true"
+IS_DBS_INITIALIZATION_ENABLED_MEDRXIV="true"
+IS_DBS_INITIALIZATION_ENABLED_REDDIT="true"
+IS_DBS_INITIALIZATION_ENABLED_TWITTER="true"
 
 IS_PRINTS_ENABLED="false"
 IS_PRINTS_ENABLED_PROVIDERS="false"
