--- a/proc_macro_libs/gen_enum_without_values/Cargo.toml
+++ b/proc_macro_libs/gen_enum_without_values/Cargo.toml
@@ -10,3 +10,4 @@ proc-macro=true
 [dependencies]
 syn = "1.0.75" #for procedural macro (get number of enum variants)
 quote = "1.0.9" #for procedural macro (get number of enum variants)
+convert_case = "0.4.0"
