--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -289,6 +289,7 @@ services:
       LINKS_LIMIT_REDDIT: ${LINKS_LIMIT_REDDIT} # i64, but > 0
       LINKS_LIMIT_TWITTER: ${LINKS_LIMIT_TWITTER} # i64, but > 0
 
+      IS_SHOW_SOURCE_PLACE_ENABLED: ${IS_SHOW_SOURCE_PLACE_ENABLED}
       IS_SHOW_GITHUB_SOURCE_PLACE_ENABLED: ${IS_SHOW_GITHUB_SOURCE_PLACE_ENABLED}
 
       ERROR_RED: ${ERROR_RED} # u8
