some dbs.env thoughts

--- a/dbs.env
+++ b/dbs.env
@@ -5,4 +5,4 @@ ME_CONFIG_MONGODB_ADMINPASSWORD="mongolocalpassword"
 # for postgres local docker container 
 POSTGRES_USER="postgreslocalusername"
 POSTGRES_PASSWORD="postgreslocalpassword"
-POSTGRES_DB: postgres
+POSTGRES_DB: postgres #maybe need to write it like this? POSTGRES_DB="postgres"
