--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 [dependencies]
 futures = "0.3.5"
 reqwest = {version = "0.11.0", features = ["json","blocking"]}
-roux = "0.4.0" #reddit
+roux = "1.3.10" #reddit. worked with 0.4.0 version
 serde = "1.0"
 serde-xml-rs = "0.5.1"
 serde_derive = "1.0"
